<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/tvTituloInfoEstacionamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTituloInfoEstacionamiento" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tvTituloInfoEstacionamientoCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLabelInfoEstacionamientoCalle"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tvInfoEstacionamientoCalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvInfoEstacionamientoCalle"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tvTituloInfoEstacionamientoCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTituloInfoEstacionamientoCiudad"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tvInfoEstacionamientoCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvInfoEstacionamientoCiudad"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/btnAbrirEnNavigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAbrirEnNavigator" />

    <Button
        android:text="@string/btnMarcarSalida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnMarcarSalida" />

</LinearLayout>